fix : help text-align to left

--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ button {
     .help {
         width: 550px;
         font-size: 34px;
-        text-align: center;
+        text-align: left;
         hyphens: auto;
     }
     #login-footer {
